# dice

./: .gitignore  CMakeLists.txt  Camera Distorion and RMS for checkerboard and dot patterns from TestStereoCalib.xlsx  Dockerfile  LICENSE  NOTICE  README  README.md  __kiss__fft__guts_8h_source.html  _d_i_ce_8h_source.html  _d_i_ce___camera_8h_source.html  _d_i_ce___camera_system_8h_source.html  _d_i_ce___cine_8h_source.html  _d_i_ce___decomp_8h_source.html  _d_i_ce___f_f_t_8h_source.html  _d_i_ce___field_enums_8h_source.html  _d_i_ce___image_8h_source.html  _d_i_ce___image_functors_8h_source.html  _d_i_ce___image_i_o_8h_source.html  _d_i_ce___image_utils_8h_source.html  _d_i_ce___initializer_8h_source.html  _d_i_ce___kokkos_8h_source.html  _d_i_ce___local_shape_function_8h_source.html  _d_i_ce___matrix_8h_source.html  _d_i_ce___mesh_8h_source.html  _d_i_ce___mesh_enums_8h_source.html  _d_i_ce___mesh_i_o_8h_source.html  _d_i_ce___multi_field_epetra_8h_source.html  _d_i_ce___multi_field_tpetra_8h_source.html  _d_i_ce___objective_8h_source.html  _d_i_ce___objective_z_n_s_s_d_8h_source.html  _d_i_ce___parameter_utilities_8h_source.html  _d_i_ce___parser_8h_source.html  _d_i_ce___point_cloud_8h_source.html  _d_i_ce___post_processor_8h_source.html  _d_i_ce___rawi_8h_source.html  _d_i_ce___schema_8h_source.html  _d_i_ce___shape_8h_source.html  _d_i_ce___simplex_8h_source.html  _d_i_ce___subset_8h_source.html  (+397 more)
src/: CMakeLists.txt
src/api/: CMakeLists.txt  DICe_api.cpp  DICe_api.h
src/base/: CMakeLists.txt  DICe.cpp  DICe.h  DICe_FieldEnums.cpp  DICe_FieldEnums.h  DICe_Image.cpp  DICe_Image.h  DICe_ImageFunctors.h  DICe_ImageKokkos.cpp  DICe_ImageSerial.cpp  DICe_ImageUtils.cpp  DICe_ImageUtils.h  DICe_Kokkos.h  DICe_LocalShapeFunction.cpp  DICe_LocalShapeFunction.h  DICe_Matrix.h  DICe_MultiFieldEpetra.h  DICe_MultiFieldTpetra.h  DICe_Shape.cpp  DICe_Shape.h  DICe_Subset.cpp  DICe_Subset.h  DICe_SubsetFunctors.h  DICe_SubsetKokkos.cpp  DICe_SubsetSerial.cpp
src/cine/: CMakeLists.txt  DICe_Cine.cpp  DICe_Cine.h
src/core/: CMakeLists.txt  DICe.cpp  DICe.h  DICe_CamSystem.cpp  DICe_CamSystem.h  DICe_Camera.cpp  DICe_Camera.h  DICe_CameraSystem.cpp  DICe_CameraSystem.h  DICe_Cameras.cpp  DICe_Cameras.h  DICe_Decomp.cpp  DICe_Decomp.h  DICe_Image.cpp  DICe_Image.h  DICe_ImageFunctors.h  DICe_ImageKokkos.cpp  DICe_ImageSerial.cpp  DICe_ImageUtils.cpp  DICe_ImageUtils.h  DICe_Initializer.cpp  DICe_Initializer.h  DICe_Kokkos.cpp  DICe_Kokkos.h  DICe_KokkosTypes.h  DICe_LocalShapeFunction.cpp  DICe_LocalShapeFunction.h  DICe_Main.cpp  DICe_MainDriver.cpp  DICe_MainDriver.h  DICe_MultiField.h  DICe_MultiFieldEpetra.h  DICe_MultiFieldTpetra.h  DICe_Objective.cpp  DICe_Objective.h  DICe_ObjectiveZNSSD.cpp  DICe_ObjectiveZNSSD.h  DICe_ParameterUtilities.cpp  DICe_ParameterUtilities.h  DICe_Parser.cpp  (+23 more)
src/fft/: CMakeLists.txt  DICe_FFT.cpp  DICe_FFT.h  _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h
src/global/: CMakeLists.txt  DICe_BCManager.cpp  DICe_BCManager.h  DICe_Global.cpp  DICe_Global.h  DICe_GlobalUtils.cpp  DICe_GlobalUtils.h  DICe_MatrixService.cpp  DICe_MatrixService.h  DICe_Preconditioner.cpp  DICe_Preconditioner.h
src/global/mesh/: CMakeLists.txt  DICe_Mesh.cpp  DICe_Mesh.h  DICe_MeshEnums.cpp  DICe_MeshEnums.h  DICe_MeshIO.cpp  DICe_MeshIO.h
src/global/triangle/: CMakeLists.txt  DICe_TriangleUtils.cpp  DICe_TriangleUtils.h  triangle.c  triangle.h
src/gui/: CMakeLists.txt
src/gui/DICe_2D/: CMakeLists.txt  DICe_2D.pro  DICe_InputVars.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdebugstream.h  qimageroiselector.h  qimageroiselector.ui  qselectionarea.cpp  qselectionarea.h  resources.qrc  simpleqtvtk.cpp  simpleqtvtk.h  simpleqtvtk.ui
src/ioutils/: CMakeLists.txt  DICe_ImageIO.cpp  DICe_ImageIO.h
src/mesh/: CMakeLists.txt  DICe_Mesh.cpp  DICe_Mesh.h  DICe_MeshEnums.cpp  DICe_MeshEnums.h  DICe_MeshIO.cpp  DICe_MeshIO.h
src/mesh/io/: CMakeLists.txt  DICe_MeshIO.cpp  DICe_MeshIO.h  DICe_MeshIOUtils.cpp  (+1 more)
src/netcdf/: CMakeLists.txt  DICe_NetCDF.cpp  DICe_NetCDF.h
src/opencv/: CMakeLists.txt  DICe_Calibration.cpp  DICe_Calibration.h  DICe_Feature.cpp  DICe_Feature.h  DICe_OpenCVServerUtils.cpp  DICe_OpenCVServerUtils.h  DICe_StereoCalib.cpp  DICe_StereoCalib.h  DICe_StereoCalib2.cpp  DICe_StereoCalib2.h
src/rawi/: DICe_Rawi.cpp  DICe_Rawi.h
src/triangle/: CMakeLists.txt  DICe_TriangleUtils.cpp  DICe_TriangleUtils.h
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/component/: CMakeLists.txt  DICe_TestAPI.cpp  DICe_TestCalReader.cpp  DICe_TestCamSystem.cpp  DICe_TestCamera.cpp  DICe_TestCameraSystem.cpp  DICe_TestCameras.cpp  DICe_TestCine.cpp  DICe_TestConrast.cpp  DICe_TestContrast.cpp  DICe_TestCorrelateConformal.cpp  DICe_TestCorrelateParams.cpp  DICe_TestCorrelateSquare.cpp  DICe_TestDecomp.cpp  DICe_TestFFT.cpp  DICe_TestGradSample.cpp  DICe_TestImage.cpp  DICe_TestImageDeformer.cpp  DICe_TestImageToWorld2D.cpp  DICe_TestInitializer.cpp  DICe_TestInterpShift.cpp  DICe_TestInterpolants.cpp  DICe_TestMatrix.cpp  DICe_TestObjective.cpp  DICe_TestObservability.cpp  DICe_TestOptInterp.cpp  DICe_TestParamUtils.cpp  DICe_TestPhaseCorrelation.cpp  DICe_TestQuadShapeFunc.cpp  DICe_TestRawi.cpp  DICe_TestRigidBodyShapeFunc.cpp  DICe_TestSIFT.cpp  DICe_TestSchema.cpp  DICe_TestSearchInitializer.cpp  DICe_TestShape.cpp  DICe_TestSubset.cpp  DICe_TestSubsetGamma.cpp  DICe_TestTensor.cpp  DICe_TestTriangulation.cpp  DICe_TestVideo.cpp
tests/examples/: CMakeLists.txt
tests/performance/: CMakeLists.txt  DICe_PerformanceCine.cpp  DICe_PerformanceFunctors.cpp  DICe_PerformanceImageCache.cpp
tests/regression/: CMakeLists.txt
tools/: CMakeLists.txt  DICe_2DExoImageDeformer.cpp  DICe_Cal.cpp  DICe_CalSatellite.cpp  DICe_CineStat.cpp  DICe_CineToTiff.cpp  DICe_CrossInit.cpp  DICe_Diff.cpp  DICe_DiffAvg.cpp  DICe_Epiline.cpp  DICe_ExoDiff.cpp  DICe_ExoToFFT.cpp  DICe_ExoToNetCDF.cpp  DICe_ImageDistorter.cpp  DICe_NetCDFToTiff.cpp  DICe_OpenCVServer.cpp  DICe_Rectify.cpp  DICe_TextToMesh.cpp  DICe_TrackingMovieMaker.cpp  DICe_VideoStat.cpp
(+1018 files in other folders)
